# projects-codes

./: Ball.qml  Collision_funcs.js  Plate.qml  Pong.qml  README.md  StartMenu.qml  StartMenuBack.qml  WinMessage.qml  main.cpp  main.qml  qml.qrc  trying.pro
codes-examples/second_third/: CMakeLists.txt  check.cpp  main.cpp
course_work/: CMakeLists.txt  LoginSystem.h  main.cpp  menus.h  userChooseMenu.h  users.h
kursach/: functions.cpp  functions.hpp  kursach.cbp  kursach.depend  kursach.layout  main.cpp
